--- a/.github/workflows/main_shopershopy.yml
+++ b/.github/workflows/main_shopershopy.yml
@@ -4,34 +4,54 @@
 name: Build and deploy container app to Azure Web App - shopershopy
 
 on:
+  pull_request:
+    branches:
+      - main
   push:
     branches:
       - main
   workflow_dispatch:
+  
+env:
+  DOCKER_USER: ${{secrets.DOCKER_USER}}
+  DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
 
 jobs:
   build:
     runs-on: 'ubuntu-latest'
-
+    defaults:
+      run:
+        working-directory: frontend
     steps:
-    - uses: actions/checkout@v2
+#     - uses: actions/checkout@v2
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+#     - name: Set up Docker Buildx
+#       uses: docker/setup-buildx-action@v1
 
-    - name: Log in to registry
-      uses: docker/login-action@v1
-      with:
-        registry: https://index.docker.io/v1/
-        username: ${{ secrets.AzureAppService_ContainerUsername_b7c5978bff334771834a8d3000b3dd02 }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_340bf955003644f89ba26093327178e3 }}
+#     - name: Log in to registry
+#       uses: docker/login-action@v1
+#       with:
+#         registry: https://index.docker.io/v1/
+#         username: ${{ secrets.AzureAppService_ContainerUsername_b7c5978bff334771834a8d3000b3dd02 }}
+#         password: ${{ secrets.AzureAppService_ContainerPassword_340bf955003644f89ba26093327178e3 }}
 
-    - name: Build and push container image to registry
-      uses: docker/build-push-action@v2
-      with:
-        push: true
-        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_b7c5978bff334771834a8d3000b3dd02 }}/wojtbart/react_app:${{ github.sha }}
-        file: ./Dockerfile
+#     - name: Build and push container image to registry
+#       uses: docker/build-push-action@v2
+#       with:
+#         push: true
+#         tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_b7c5978bff334771834a8d3000b3dd02 }}/wojtbart/react_app:${{ github.sha }}
+#         file: ./Dockerfile
+      - name: Checkout current branch (full)
+        uses: actions/checkout@v2
+
+      - name: Login Docker
+        run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag wojtbart/react_app:${{ github.sha }}
+
+      - name: Docker Push
+        run: docker push wojtbart/react_app:${{ github.sha }}
 
   deploy:
     runs-on: ubuntu-latest
