--- a/.github/workflows/main_shopershopy.yml
+++ b/.github/workflows/main_shopershopy.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: 'ubuntu-latest'
     defaults:
       run:
-        working-directory: frontend
+        working-directory: projekt/backend/frontend
     steps:
 #     - uses: actions/checkout@v2
 
