--- a/.github/workflows/main_shopershopy-backend.yml
+++ b/.github/workflows/main_shopershopy-backend.yml
@@ -4,34 +4,32 @@
 name: Build and deploy container app to Azure Web App - shopershopy-backend
 
 on:
+  pull_request:
+    branches: ['main']
   push:
-    branches:
-      - main
-  workflow_dispatch:
+    branches: ['main']
+    
+env:
+    DOCKER_USER: ${{secrets.DOCKER_USER}}
+    DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
 
 jobs:
   build:
     runs-on: 'ubuntu-latest'
+    defaults:
+      run:
+        working-directory: projekt/frontend
 
     steps:
     - uses: actions/checkout@v2
+    - name: Login Docker
+      run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag wojtbart/scala_back:${{ github.sha }}
 
-    - name: Log in to registry
-      uses: docker/login-action@v1
-      with:
-        registry: https://index.docker.io/v1/
-        username: ${{ secrets.AzureAppService_ContainerUsername_1464e5ac31bf481d80aa60b039ce8ea5 }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_3500521e3cd44293a167d042709a1b0d }}
-
-    - name: Build and push container image to registry
-      uses: docker/build-push-action@v2
-      with:
-        push: true
-        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_1464e5ac31bf481d80aa60b039ce8ea5 }}/wojtbart/scala_back:${{ github.sha }}
-        file: ./Dockerfile
+    - name: Docker Push
+      run: docker push wojtbart/scala_back:${{ github.sha }}
 
   deploy:
     runs-on: ubuntu-latest
@@ -48,4 +46,4 @@ jobs:
         app-name: 'shopershopy-backend'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_54274ee4648342598ed2136f71080b4b }}
-        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_1464e5ac31bf481d80aa60b039ce8ea5 }}/wojtbart/scala_back:${{ github.sha }}'
+        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_1464e5ac31bf481d80aa60b039ce8ea5 }}scala_back:${{ github.sha }}'
