--- a/.github/workflows/main_shopershopy-backend.yml
+++ b/.github/workflows/main_shopershopy-backend.yml
@@ -21,7 +21,9 @@ jobs:
         working-directory: projekt/frontend
 
     steps:
+    - name: Checkout current branch (full)
     - uses: actions/checkout@v2
+    
     - name: Login Docker
       run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
 
@@ -39,6 +41,18 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Log in to registry
+      uses: docker/login-action@v1
+      with:
+        registry: https://index.docker.io/v1/
+        username: ${{ secrets.AzureAppService_ContainerUsername_1464e5ac31bf481d80aa60b039ce8ea5 }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_1184F3DB697941AAA9386041F3C11863 }}
+    
     - name: Deploy to Azure Web App
       id: deploy-to-webapp
       uses: azure/webapps-deploy@v2
