--- a/.github/workflows/main_shopershopy-backend.yml
+++ b/.github/workflows/main_shopershopy-backend.yml
@@ -44,10 +44,10 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+    - uses: docker/setup-buildx-action@v1
 
     - name: Log in to registry
-      uses: docker/login-action@v1
+    - uses: docker/login-action@v1
       with:
         registry: https://index.docker.io/v1/
         username: ${{ secrets.AzureAppService_ContainerUsername_1464e5ac31bf481d80aa60b039ce8ea5 }}
