--- a/.github/workflows/main_shopershopy-backend.yml
+++ b/.github/workflows/main_shopershopy-backend.yml
@@ -15,6 +15,7 @@ env:
 
 jobs:
   build:
+    name: Build and Test
     runs-on: 'ubuntu-latest'
     defaults:
       run:
@@ -22,7 +23,7 @@ jobs:
 
     steps:
     - name: Checkout current branch (full)
-    - uses: actions/checkout@v2
+      uses: actions/checkout@v2
     
     - name: Login Docker
       run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
@@ -44,10 +45,10 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Set up Docker Buildx
-    - uses: docker/setup-buildx-action@v1
+      uses: docker/setup-buildx-action@v1
 
     - name: Log in to registry
-    - uses: docker/login-action@v1
+      uses: docker/login-action@v1
       with:
         registry: https://index.docker.io/v1/
         username: ${{ secrets.AzureAppService_ContainerUsername_1464e5ac31bf481d80aa60b039ce8ea5 }}
